--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.env
 .vscode/*
 !.vscode/extensions.json
 .idea
@@ -24,4 +23,6 @@ dist-ssr
 *.sln
 *.sw?
 
+# env
 .vercel
+.env
